# CP-Parallel-Ecosystem

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  main.cpp  main.hpp  sonar-project.properties
.github/workflows/: cmake.yml  codacy-analysis.yml  codeql-analysis.yml  coverity-scan.yml
src/: main.cpp  main.hpp
tests/: allgen10x10  allgen20x20  allgen5x5  input100x100  input100x100_unbal01  input100x100_unbal02  input10x10  input200x200  input20x20  input5x5  output100x100  output100x100_unbal01  output100x100_unbal02  output10x10  output200x200  output20x20  output5x5
